# cu-demo-days-23-07-2025-auto-tests

./: README.md  pyproject.toml
src/: config.py  test_api.py
src/noises/: base.py  gaussian.py  white.py
src/utils/: audio.py
